[gd_scene load_steps=6 format=3 uid="uid://bdiyfgq02cvwy"]

[ext_resource type="Texture2D" uid="uid://87buhp2h0ief" path="res://icon.svg" id="1_gy4kk"]
[ext_resource type="Script" path="res://Scripts/Components/actor_sprite.gd" id="2_kbsop"]

[sub_resource type="Animation" id="Animation_1kmv2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ey76l"]
resource_name = "blink"
length = 0.3
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16),
"transitions": PackedFloat32Array(0, 0),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.745098, 0.745098, 0.745098, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dwyjo"]
_data = {
"RESET": SubResource("Animation_1kmv2"),
"blink": SubResource("Animation_ey76l")
}

[node name="ActorSprite" type="Sprite2D"]
texture = ExtResource("1_gy4kk")
script = ExtResource("2_kbsop")

[node name="SpriteEffects" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_dwyjo")
}

[node name="EffectTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="EffectTimer" to="." method="_on_timer_timeout"]
